ref-implementation/argo-workflows/manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows-ingress
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
    - host: localhost
      http:
        paths:
          - path: /argo-workflows(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: argo-server
                port:
                  name: web
    - host: localhost
      http:
        paths:
          - path: /argo-workflows(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: argo-server
                port:
                  name: web
